# serge-raspberry-pi

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SensorRunner.py  TODO.md  W1Therm_Class.py  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: build.yaml  sonarqube.yaml
Outputs/: MostRecent1
Outputs/TestOutputs/: OutputData Fri Jul 25 19:53:32 2025  OutputData Mon Jul 21 00:05:13 2025  OutputData Mon Jul 21 00:08:30 2025  OutputData Mon Jul 21 00:10:34 2025  OutputData Mon Jul 21 00:12:24 2025  OutputData Mon Jul 21 00:13:30 2025  OutputData Mon Jul 21 00:14:53 2025  OutputData Mon Jul 21 00:15:44 2025  OutputData Mon Jul 21 00:20:27 2025  OutputData Mon Jul 21 00:25:00 2025  OutputData Mon Jul 21 00:26:00 2025  OutputData Mon Jul 21 00:35:56 2025  OutputData Mon Jul 21 11:09:36 2025  OutputData Mon Jul 21 20:39:12 2025  OutputData Mon Jul 21 20:50:46 2025  OutputData Mon Jul 28 17:43:36 2025  OutputData Sun Jul 20 22:26:57 2025  OutputData Sun Jul 20 22:28:36 2025  OutputData Sun Jul 20 22:35:02 2025  OutputData Sun Jul 20 23:06:57 2025  OutputData Sun Jul 20 23:24:57 2025  OutputData Sun Jul 27 22:31:55 2025  OutputData Thu Jul 24 05:41:54 2025  (+11 more)
output/: OutputData Mon Oct 27 22:11:10 2025  OutputData Mon Oct 27 22:27:14 2025  OutputData Mon Oct 27 22:29:58 2025  OutputData Mon Oct 27 22:34:40 2025  OutputData Mon Oct 27 22:36:28 2025  OutputData Tue Apr 14 14:31:33 2026  OutputData Tue Apr 14 14:45:48 2026  OutputData Tue Apr 14 14:49:42 2026
src/: config.py  main.py
tests/: conftest.py
(+11 files in other folders)
