[project]
name = "serge-raspberry-pi"
version = "0.1.0"
description = "Raspberry pi software for the SERGE Storm Chasing Team"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adafruit-blinka>=9.1.0",
    "adafruit-circuitpython-bme280>=2.6.32",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "lgpio>=0.2.2.0",
    "sgp30>=0.1.6",
    "uuid-utils>=0.16.0",
    "w1thermsensor>=2.3.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]
tests = [
    "pytest>=9.0.3",
]
